--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Marcus Watson | Professional SSB Player</title>
+    <title>Marcus Watson | Competitive SSB Player</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="stylesheet" href="assets/main.css">
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
@@ -10,30 +10,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div id="wrapper" style="max-width:940px; margin:0 auto;padding:0 8%;">
     <header>
-      <a href="project.html" id="logo">
+      <a href="about.html" id="logo">
           <h1>Marcus Watson</h1>
-          <h2>Professional SSB Player</h2>
+          <h2>Competitive SSB Player</h2>
         </a>
         <nav>
           <ul>
-            <li><a href="project.html">Portfolio</a></li>
             <li><a href="about.html" class="selected">About</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="xp.html">Experience</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
       <div id="wrapper">
         <section>
-          <img src="https://pbs.twimg.com/profile_images/1065455846472192000/j97Mi8AR_400x400.jpg" alt="Twitter pic" class="profile-photo">
+          <img src="https://pbs.twimg.com/profile_images/1110011276527321090/D7ZY7j6E_400x400.jpg" alt="Twitter pic" class="profile-photo">
           <h3>About</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Hello! I'm Marcus, a 17 y/o high school junior at Plantation High School. I play Super Smash Bros. competitively, and I plan on attending a 4-year university to pursue a Computer Science degree.</p>
           <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/BKHei_">@BKHei_</a>.</p>
         </section>
         <footer>
           <a href="http://twitter.com/BKHei_"><img src="assets/images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-          <p>&copy; 2018 Marcus W.</p>
+          <p>&copy; 2019 Marcus W.</p>
         </footer>
       </div>
     </body>
