--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang>
   <head>
     <meta charset="utf-8">
-    <title>Marcus Watson | Professional SSB Player</title>
+    <title>Marcus Watson | Competitive SSB Player</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/main.css">
@@ -11,14 +11,15 @@
   </head>
   <body>
     <header>
-      <a href="project.html" id="logo">
+      <a href="contact.html" id="logo">
         <h1>Marcus Watson</h1>
-        <h2>Professional SSB Player</h2>
+        <h2>Competitive SSB Player</h2>
       </a>
       <nav>
         <ul>
-          <li><a href="project.html">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="project.html">Projects</a></li>
+          <li><a href="xp.html">Experience</a></li>
           <li><a href="contact.html" class="selected">Contact</a></li>
         </ul>
       </nav>
@@ -26,7 +27,7 @@
     <div id="wrapper">
       <section id="primary">
         <h3>General Information</h3>
-        <p>I am currently sponsored by Counter-Logic Gaming, but for any new other sponsorships, I am available for food endorsements. If you have any questions, please don't hesitate to contact me!</p>
+        <p>I am currently a free agent looking for a team, but I am also available for food/drink endorsements. If you have any questions, please don't hesitate to contact me!</p>
         <p>Please only use phone contact for urgent inquiries. Otherwise, Twitter and email are the best way to reach me.</p>
       </section>
       <section id="secondary">
@@ -39,7 +40,7 @@
       </section>
       <footer>
         <a href="http://twitter.com/BKHei_"><img src="assets/images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <p>&copy; 2018 Marcus W.</p>
+        <p>&copy; 2019 Marcus W.</p>
       </footer>
     </div>
   </body>
