--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Marcus Watson | Professional SSB Player</title>
+    <title>Marcus Watson | Competitive SSB Player</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/main.css">
@@ -12,17 +12,17 @@
       </style>
   </head>
   <body>
-      <header style ="background-color: orange;font-size:"20px>
+      <header style ="font-size:"20px>
         <a href="project.html" id="logo">
         <h1>Marcus Watson</h1>
-        <h2>Professional SSB Player</h2>
+        <h2>Competitive SSB Player</h2>
         </a>
         <nav>
           <ul>
             <a href="about.html"><li>About</li></a>
             <a href="project.html"class="selected"><li>Projects</li></a>
             <a href="xp.html"><li>Experience</li></a>
-            <a href="contact.html"><li>Contacts</li></a>
+            <a href="contact.html"><li>Contact</li></a>
           </ul>
         </nav>
       </header>
@@ -30,30 +30,28 @@
         <section>
         <ul id="gallery">
             <li>
-              <a href="#" target="_blank">
+              <a href="https://scratch.mit.edu/projects/254866373/" target="_blank">
                 <img src="assets/images/Scratchp.png" alt="Scratch project" width="600" height="300">
-              <p>My scratch project<p>
+              <p>Scratch Project<p>
               </a>
             </li>
             <li>
-              <a href="#" target="_blank">
-                <img src="assets/images/numbers-01.jpg" alt="Scratch project" width="600" height="300">
-              <p>small description<p>
+              <a href="https://carillo.herokuapp.com" target="_blank">
+                <img src="assets/images/FSC.png" alt="Fullstackconference" width="600" height="300">
+              <p>Full-Stack Conference<p>
               </a>
             </li>
             <li>
-              <a href="#" target="_blank">
                 <img src="assets/images/numbers-02.jpg" alt="Scratch project" width="600" height="300">
-              <p>small description<p>
+              <p>Graphic design<p>
               </a>
             </li>
             <li>
-              <a href="#" target="_blank">
                 <img src="assets/images/numbers-06.jpg" alt="Scratch project" width="600" height="300">
-              <p>small description<p>
+              <p>Graphic design<p>
               </a>
             </li>
       <section style="color:green;font-size:20px">
         <img src="" alt="">
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p> I've worked on a variety of projects. Please take a look! </p>
       </section>
