--- a/xp.html
+++ b/xp.html
@@ -2,31 +2,33 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About</title>
+    <title>Marcus Watson | Competitive SSB Player</title>
+    <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header style="background-color:Blue;">
-      <h1 style="color:Blue;">Marcus Watson</h1>\
-      <h2>Consulting</h2>
-      <ul>
-        <a href="about.html"><li>About</li></a>
-        <a href="project.html"><li>Projects</li></a>
-        <a href="xp.html"><li>Experience</li></a>
-        <a href="contact.html"><li>Contact</li></a>
-      </ul>
+    <header>
+      <a href="xp.html" id="logo">
+          <h1>Marcus Watson</h1>
+          <h2>Competitive SSB Player</h2>
+        </a>
+        <nav>
+          <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="xp.html" class="selected">Experience</a></li>
+            <li><a href="contact.html">Contact</a></li>
+         </ul>
     </header>
     <section>
-      <h2>My Experience (I)</h2>
+      <h2>Experience</h2>
+      
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </section>
-    <section>
-      <h2> My Experience (II)</h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </section>
-    <footer style="background-color:orange;">
-      <img src="" alt="">
-      <img src="" alt="">
-      &copy;Landmammal
+      </section>
+      &copy; 2019 Marcus W. 
     </footer>
   </body>
 </html>
