--- a/project.html
+++ b/project.html
@@ -42,8 +42,9 @@
               </a>
             </li>
             <li>
-                <img src="assets/images/numbers-02.jpg" alt="Scratch project" width="600" height="300">
-              <p>Graphic design<p>
+              <a href="https://still-anchorage-99795.herokuapp.com/Home.html" target="_blank">
+                <img src="assets/images/gameproject.png" alt="Game website" width="600" height="300">
+              <p>Video game website<p>
               </a>
             </li>
             <li>
