--- a/xp.html
+++ b/xp.html
@@ -24,9 +24,7 @@
          </ul>
     </header>
     <section>
-      <h2>Experience</h2>
-      
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <p> I started coding in 2018, learning a little bit at a time. Later in 2018, I began learning Javascript and HTML, while also some CSS on the side. I also began learning how to use different programs such as Terminal, Node, Heroku, GitHub, and Microsoft Visual Studio Code for storing code, and editing code. So far I've designed my own portfolio, and I have worked on a website for a conference, along with creating a game website and making a project on scratch.
       </section>
       &copy; 2019 Marcus W. 
     </footer>
