--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
       </header>
       <div id="wrapper">
         <section>
-          <img src="https://pbs.twimg.com/profile_images/1110011276527321090/D7ZY7j6E_400x400.jpg" alt="Twitter pic" class="profile-photo">
+          <a href ="http://twitter.com/BKHei_"><img src="https://pbs.twimg.com/profile_images/1110011276527321090/D7ZY7j6E_400x400.jpg" alt="Twitter pic" class="profile-photo">
           <h3>About</h3>
-          <p>Hello! I'm Marcus, a 17 y/o high school junior at Plantation High School. I play Super Smash Bros. competitively, and I plan on attending a 4-year university to pursue a Computer Science degree.</p>
+          <p>Hello! I'm Marcus, a 17 y/o high school junior at Plantation High School. I play Super Smash Bros. competitively, and I plan on attending a 4-year university to pursue a Computer Science degree. I have decent experience with HTML/CSS along with Javascript.</p>
           <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/BKHei_">@BKHei_</a>.</p>
         </section>
         <footer>
