--- a/xp.html
+++ b/xp.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Marcus Watson | Competitive SSB Player</title>
+    <title>Marcus Watson | Competitive SSB Player & Programmer</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="stylesheet" href="assets/main.css">
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
@@ -13,7 +13,7 @@
     <header>
       <a href="xp.html" id="logo">
           <h1>Marcus Watson</h1>
-          <h2>Competitive SSB Player</h2>
+          <h2>Competitive SSB Player & Programmer</h2>
         </a>
         <nav>
           <ul>
