--- a/project.html
+++ b/project.html
@@ -47,12 +47,8 @@
               <p>Video game website<p>
               </a>
             </li>
-            <li>
-                <img src="assets/images/numbers-06.jpg" alt="Scratch project" width="600" height="300">
-              <p>Graphic design<p>
-              </a>
-            </li>
       <section style="color:green;font-size:20px">
         <img src="" alt="">
         <p> I've worked on a variety of projects. Please take a look! </p>
       </section>
+      <p>&copy; 2019 Marcus W.</p>
